# wgpu-charts

./: .gitignore  Cargo.toml  DISCOVERED_ISSUES.md  REFACTORING_PLAN.md  charter_model.onnx  config.toml  flake.nix
.claude/: settings.local.json
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 1q5s24y7qniifrw20xrykz0ygvapglln-source  6p3vwik0z3v9mbmr0fkkfmmjihp1rbnp-source  72dd58kpjsyw5fz6c663y826yjsngh2m-source  bx33db180hs23azdh6jhfx5jp6ykwc1p-source  kfcxqcxb9hcq6x33sg4cmwakbb1ifwg9-source  y6jlk4dilxyfmfwqd4hryvjqyxaz780x-source
crates/charter/: Cargo.toml
crates/charter-backtest/: Cargo.toml
crates/charter-backtest/src/: main.rs
crates/charter-config/: Cargo.toml
crates/charter-config/src/: lib.rs
crates/charter-core/: Cargo.toml
crates/charter-core/src/: candle.rs  lib.rs  series.rs  timeframe.rs
crates/charter-data/: Cargo.toml
crates/charter-data/src/: csv.rs  lib.rs  live.rs  mexc.rs  source.rs  trade_buffer.rs  validation.rs
crates/charter-indicators/: Cargo.toml
crates/charter-indicators/src/: indicator.rs  lib.rs  macd.rs
crates/charter-render/: Cargo.toml
crates/charter-render/src/: camera.rs  gpu_context.rs  gpu_types.rs  lib.rs  renderer.rs
crates/charter-render/src/pipeline/: candle.rs  current_price.rs  depth_heatmap.rs  drawing.rs  guideline.rs  indicator.rs  mod.rs  shared.rs  ta.rs  traits.rs  volume.rs  volume_profile.rs
crates/charter-render/src/shaders/: candle.wgsl  current_price.wgsl  depth_heatmap.wgsl  drawing.wgsl  guidelines.wgsl  indicator.wgsl  ta.wgsl  volume.wgsl  volume_profile.wgsl
crates/charter-sync/: Cargo.toml
crates/charter-sync/src/: db.rs  fetcher.rs  lib.rs
crates/charter-ta/: Cargo.toml  PLAN.md
crates/charter-ta/benches/: analyzer_bench.rs
crates/charter-ta/examples/: export_features.rs  export_level_events.rs
crates/charter-ta/src/: analyzer.rs  export.rs  inference.rs  lib.rs  ml.rs  multi_timeframe.rs
crates/charter-ta/src/analyzer/: forward_pass.rs  mod.rs  multi_timeframe.rs  reverse_pass.rs  state.rs
crates/charter-ta/src/ml/: features.rs  level_events.rs  mod.rs
crates/charter-ta/src/rules/: combinators.rs  direction.rs  mod.rs
crates/charter-ta/src/types/: candle.rs  config.rs  direction.rs  level.rs  mod.rs  range.rs  trend.rs
crates/charter-ui/: Cargo.toml
crates/charter-ui/src/: indicator_panel.rs  lib.rs  stats_panel.rs  top_bar.rs
crates/charter/src/: app.rs  coords.rs  indicators.rs  input.rs  input_mode.rs  main.rs  market_data.rs  replay.rs  state.rs  state_legacy.rs
crates/charter/src/drawing/: mod.rs  state.rs  types.rs
crates/charter/src/events/: bus.rs  mod.rs  types.rs
crates/charter/src/input/: mode.rs
crates/charter/src/input_new/: mod.rs
crates/charter/src/state/: document.rs  graphics.rs  interaction.rs  mod.rs  snapshot.rs  ui.rs  view.rs
crates/charter/src/ui/: drawing_toolbar.rs  loading_overlay.rs  macd_panel.rs  mod.rs  symbol_picker.rs  ta_panel.rs
crates/mexc-api/: Cargo.toml  documentation.md
crates/mexc-api/src/: client.rs  config.rs  error.rs  lib.rs  proto.rs  rate_limit.rs  websocket.rs
crates/mexc-api/src/spot/: account.rs  market.rs  mod.rs  trading.rs
crates/mexc-api/src/types/: account.rs  common.rs  market.rs  mod.rs  trading.rs  websocket.rs
crates/mexc-api/tests/: integration_tests.rs
scripts/: plot_trades.py
scripts/ml/: README.md  backtest_level_model.py  export_xgboost_dump.py  requirements.txt  test_predictions.py  train_level_model.py  train_model.py  tune_hyperparameters.py
src/: main.rs
