[package]
name = "charter"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "24.0.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
snafu = "0.8.9"
anyhow = "1.0.100"
bytemuck = { version = "1.24", features = [ "derive" ] }
csv = "1.3"
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"

