[package]
name = "charter-backtest"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "charter-backtest"
path = "src/main.rs"

[dependencies]
charter-core = { path = "../charter-core" }
charter-data = { path = "../charter-data" }
charter-ta = { path = "../charter-ta" }
anyhow = "1.0"
ort = { version = "2.0.0-rc.11", default-features = false, features = ["ndarray", "download-binaries", "tls-native"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
