[package]
name = "charter-data"
version.workspace = true
edition.workspace = true

[dependencies]
charter-core.workspace = true
csv.workspace = true
anyhow.workspace = true
mexc-api = { path = "../mexc-api" }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
rust_decimal = "1"
