[package]
name = "charter-sync"
version.workspace = true
edition.workspace = true

[dependencies]
charter-core.workspace = true
duckdb = "1.0"
tokio = { version = "1", features = ["sync", "time", "rt"] }
mexc-api = { path = "../mexc-api" }
anyhow.workspace = true
log.workspace = true
dirs = "5.0"

[dev-dependencies]
tempfile = "3"
