[package]
name = "charter-ta"
version.workspace = true
edition.workspace = true
description = "Rule-based technical analysis for charter"

[dependencies]
charter-core.workspace = true
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.ort]
version = "2.0.0-rc.11"
default-features = false
features = ["ndarray", "download-binaries", "tls-native"]

[dependencies.ndarray]
version = "0.17"

[features]
default = []
ml-inference = []

[dev-dependencies]
