[package]
name = "charter-ta"
version.workspace = true
edition.workspace = true
description = "Rule-based technical analysis for charter"

[dependencies]
charter-core.workspace = true
ordered-float = "4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.ort]
version = "2.0.0-rc.11"
default-features = false
features = ["ndarray", "download-binaries", "tls-native"]

[dependencies.ndarray]
version = "0.17"

[features]
default = []
ml-inference = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "analyzer_bench"
harness = false
