[package]
name = "charter"
version.workspace = true
edition.workspace = true

[[bin]]
name = "charter"
path = "src/main.rs"

[[bin]]
name = "charter-ml-export"
path = "src/bin/ml_export.rs"

[dependencies]
charter-config.workspace = true
charter-core.workspace = true
charter-data.workspace = true
charter-indicators.workspace = true
charter-render.workspace = true
charter-sync.workspace = true
charter-ta.workspace = true
charter-ui.workspace = true
wgpu.workspace = true
winit.workspace = true
env_logger.workspace = true
log.workspace = true
pollster.workspace = true
anyhow.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
bytemuck.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
