[package]
name = "mexc-api"
version = "0.1.0"
edition = "2024"
description = "Rust client library for MEXC cryptocurrency exchange API"
license = "MIT"
repository = "https://github.com/zenneh/charter"
keywords = ["mexc", "cryptocurrency", "trading", "api", "exchange"]
categories = ["api-bindings", "finance"]

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Error handling
thiserror = "2"

# Utilities
url = "2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
rust_decimal = { version = "1", features = ["serde"] }

# Protocol Buffers
prost = "0.13"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
wiremock = "0.6"

[features]
default = ["spot"]
spot = []
futures = []
websocket = []
